--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-just-parallax": "^3.1.16",
     "react-router-dom": "^6.22.3",
     "scroll-lock": "^2.1.5"
   },
@@ -27,5 +28,8 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
-  }
+  },
+  "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
+  "lint:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx,json}",
+  "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css,md,json,scss}--config ./.prettierrc"
 }
